--- a/SovaCloud/SovaCloud/Views/Account/SignUp.cshtml
+++ b/SovaCloud/SovaCloud/Views/Account/SignUp.cshtml
@@ -1,6 +1,6 @@
-﻿
+﻿@model User
 @{
-    ViewData["Title"] = "Sign In";
+	ViewData["Title"] = "Sign Up";
 }
 
 <!DOCTYPE html>
@@ -29,10 +29,10 @@
             padding-left: 25px;
         }
 
-        input:focus {
-            outline: none;
-            border: 2px solid #C1D9FD;
-        }
+            input:focus {
+                outline: none;
+                border: 2px solid #C1D9FD;
+            }
 
         .circle {
             position: absolute;
@@ -78,44 +78,52 @@
             cursor: pointer;
         }
 
-        .button:hover {
-            background-color: #0D6CF2;
-        }
+            .button:hover {
+                background-color: #0D6CF2;
+            }
 
         a.button {
             text-decoration: none;
         }
 
-        .registration-button {
+        .authorization-button {
             color: #C6CFDC;
             background: #F2F6FF;
             margin-top: 30px;
         }
-        .registration-button:hover {
-            background: #E2E6F0;
-            color: #FFF;
-        }
+
+            .authorization-button:hover {
+                background: #E2E6F0;
+                color: #FFF;
+            }
     </style>
 </head>
 <body>
     <div class="text-center">
-        <h1 class="display-4">Sign In</h1>
+        <h1 class="display-4">Sign Up</h1>
         <div class="circle"></div>
-        <div class="register-form-container">
-            <div class="form-field">
-                <input type="text" placeholder="E-mail"/>
+        <form asp-controller="Account" asp-action="SignUp" method="post">
+            <div class="register-form-container" asp-controller="Account" asp-action="CreateNewUser" method="post">
+                <div class="form-field">
+                    <input type="email" asp-for="EmailAddress" placeholder="E-Mail"/>
+                    <span asp-validation-for="EmailAddress" class="text-danger"></span>
+                </div>
+                <div class="form-field">
+                    <input type="password" asp-for="Password" placeholder="Password"/>
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+                <div class="form-field">
+                    <input type="password" asp-for="PasswordConfirmation" placeholder="Confirm Password"/>
+                    <span asp-validation-for="PasswordConfirmation" class="text-danger"></span>
+                </div>
+                <div class="form-buttons">
+                    <button class="button" type="submit">Sign Up</button>
+                    <a class="button authorization-button" asp-area="" asp-controller="Account" asp-action="SignIn">
+                        Already have an account? Let's Sign In!
+                    </a>
+                </div>
             </div>
-            <div class="form-field">
-                <input type="text" placeholder="Password"/>
-            </div>
-            <div class="form-buttons">
-                <button class="button">Sign In</button>
-                <a class="button registration-button" asp-area="" asp-controller="Home" asp-action="SignUp">
-                    Don't have an account? Create new one!
-                </a>
-            </div>
-        </div>
+        </form>
     </div>
 </body>
 </html>
-
