--- a/SovaCloud/SovaCloud/Views/Shared/_LayoutLogined.cshtml
+++ b/SovaCloud/SovaCloud/Views/Shared/_LayoutLogined.cshtml
@@ -1,6 +1,4 @@
-﻿@model User
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -34,7 +32,7 @@
                         </li>
                     </ul>
                     <div class="right-links">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="SignIn">Sign In</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="LogOut">Log Out</a>
                     </div>
                 </div>
             </div>
