--- a/SovaCloud/SovaCloud/Views/Shared/_Layout.cshtml
+++ b/SovaCloud/SovaCloud/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="SignIn">Your files</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="SignIn">YourFiles</a>
                         </li>
                     </ul>
                     <div class="right-links">
