--- a/SovaCloud/SovaCloud/Views/Shared/_LayoutLogined.cshtml
+++ b/SovaCloud/SovaCloud/Views/Shared/_LayoutLogined.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="HomeLogined">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="YourFiles">Your files</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="File" asp-action="YourFiles">YourFiles</a>
                         </li>
                     </ul>
                     <div class="right-links">
