--- a/SovaCloud/SovaCloud/Views/File/YourFiles.cshtml
+++ b/SovaCloud/SovaCloud/Views/File/YourFiles.cshtml
@@ -1,4 +1,5 @@
-﻿@model IFormFile
+﻿@using File = SovaCloud.Models.File;
+@model List<File>
 @{
 	ViewData["Title"] = "Your files";
 	Layout = "~/Views/Shared/_LayoutLogined.cshtml";
@@ -29,6 +30,22 @@
 			height: 45px;
 			width: 100%;
 			background: #247FFF;
+			border-radius: 5px;
+			color: #FFF;
+			text-transform: uppercase;
+			text-align: center;
+			line-height: 45px;
+			margin-bottom: 13px;
+			cursor: pointer;
+		}
+
+		.delete-button {
+			font-weight: bold;
+			font-size: 14px;
+			display: block;
+			height: 45px;
+			width: 100%;
+			background: #a0203a;
 			border-radius: 5px;
 			color: #FFF;
 			text-transform: uppercase;
@@ -98,20 +115,31 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr>
-				<th>fjsdlkfewr.png</th>
-				<th>10.05.2024 18:09</th>
-				<th>.png</th>
-				<th>0.236 Mb</th>
-				<th><a href="#">Download</a></></th>
-			</tr>
-			<tr>
-				<th>QkFcBTKhIuk.jpg</th>
-				<th>13.05.2024 16:53</th>
-				<th>.jpg</th>
-				<th>0.324 Mb</th>
-				<th><a href="#">Download</a></></th>
-			</tr>
+			@if (Model != null)
+			{
+				@foreach (var file in Model)
+				{
+					<tr>
+						<th>@file.Name</th>
+						<th>@file.DateTimeAdded</th>
+						<th>@file.Type</th>
+						<th>@file.Size Mb</th>
+						<th>
+							<form method="post" asp-controller="File" asp-action="DownloadFile">
+								<input type="hidden" name="fileName" value="@file.Name"/>
+								<button type="submit" class="button">Download</button>
+							</form>
+						</th>
+						<th>
+							<form method="post" asp-controller="File" asp-action="DeleteFile">
+								<input type="hidden" name="fileName" value="@file.Name"/>
+								<button type="submit" class="delete-button">Delete</button>
+							</form>
+						</th>
+					</tr>
+				}
+			}
+			
 		</tbody>
 	</table>
 </body>
